Lavorato sul sito, fatto le position e z-index

--- a/about.html
+++ b/about.html
@@ -45,13 +45,17 @@ box-sizing: serve per contenere tutti i div all'interno della finestra
 
 <div class="container">
 	<section>
-		<h1 class="text-color">BENVENUTO NELLA HOME</h1>
-		<p class="text-color">ciao</p>
+		<h1>BENVENUTO NELLA HOME</h1>
+		<p>ciao</p>
 	</section>
 	<aside>
 		<h2>Menu secondario</h2>
 	</aside>
 </div>
+<footer><!---->
+	<p>Marco Srl - Via Domenica Cia 50, 10097 Falabrac</p>
+	<p>PIVA: 123456789</p>
+</footer>
 
 
 
