--- a/Prove/indexs.html
+++ b/Prove/indexs.html
@@ -1,9 +1,10 @@
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!DOCTYPE html>
 <html lang="it">
   <head>
     <meta charset="utf-8">
-    <title>Le prove di Marco</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css" >
+    <title>Index simulazione esame</title>
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
   </head>
   <body>
 
@@ -18,31 +19,36 @@
           <a href="#">HOME</a>
         </li>
         <li>
-          <a href="html.html">HTML</a>
+          <a href="about.html">ABOUT</a>
         </li>
         <li>
-          <a href="css.html">CSS</a>
+          <a href="contacts.html">CONTACTS</a>
         </li>
       </ul>
     </nav>
 
     <div class="container">
       <section>
+        <h1>DIV 2</h1>
+        <div class="img-container">
+          <img src="https://static.pexels.com/photos/2324/skyline-buildings-new-york-skyscrapers.jpg" alt="City landscape" width="100%">
+        </div>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       </section>
 
-      <aside>
-				<h2>Menu secondario</h2>
-        <p>tante cagate da scrivere e e ciao ciaoaciao</p>
-			</aside>
+      <aside class="desktop">
+        <h2>Menu secondario</h2>
+        <div class="img-background">
+          <p>è un'immagine di sfondo</p>
+        </div>
+      </aside>
+
 
     </div>
 
-
     <footer>
-      <p>Antonino Marco - ITS ICT Piemonte - Corso Backend</p>
-      <a href="https://github.com/MarcoAntonino" target="_blank">Repository di Github</a>
-      <p>mail marco[dot]antonino[at]edu[dot]itspiemonte[dot]it</p>
+      <p>Marco Antonino - ITS ICT Piemonte - Corso Backend</p>
+      <p>marco[dot]antonino[at]edu[dot]itspiemonte[dot]it</p>
     </footer>
 
   </body>
