--- a/Prove/indexs.html
+++ b/Prove/indexs.html
@@ -3,11 +3,10 @@
 <html lang="it">
   <head>
     <meta charset="utf-8">
-    <title>Index simulazione esame</title>
-    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <title>Prova</title>
+    <link rel="stylesheet" href="css/styles.css" type="text/css">
   </head>
   <body>
-
     <header>
       <div class="logo text-color">LOGO</div>
       <a href="#" class="login text-color">Login</a>
@@ -15,40 +14,36 @@
 
     <nav>
       <ul>
-        <li>
-          <a href="#">HOME</a>
-        </li>
-        <li>
-          <a href="about.html">ABOUT</a>
-        </li>
-        <li>
-          <a href="contacts.html">CONTACTS</a>
-        </li>
+        <li><a href="#">HOME</a></li>
+        <li><a href="about.html">ABOUT</a></li>
+        <li><a href="contact.html">CONTACTS</a></li>
       </ul>
     </nav>
 
     <div class="container">
       <section>
-        <h1>DIV 2</h1>
+        <h1>Titolo principale</h1>
         <div class="img-container">
-          <img src="https://static.pexels.com/photos/2324/skyline-buildings-new-york-skyscrapers.jpg" alt="City landscape" width="100%">
+          <img src="https://cdn.pixabay.com/photo/2017/04/08/10/42/burj-khalifa-2212978_960_720.jpg" alt="Nocturne city landscape" width=100%>
+
         </div>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <div class="square external">absolute rispetto section</div>
+        <div class="square-page">fixed rispetto browser</div>
       </section>
 
       <aside class="desktop">
         <h2>Menu secondario</h2>
-        <div class="img-background">
-          <p>è un'immagine di sfondo</p>
-        </div>
+        <p>prova prova sa sa</p>
+        <div class="square-section">absolute rispetto aside</div>
       </aside>
-
 
     </div>
 
     <footer>
-      <p>Marco Antonino - ITS ICT Piemonte - Corso Backend</p>
-      <p>marco[dot]antonino[at]edu[dot]itspiemonte[dot]it</p>
+      <p>Marco Antonino</p>
+      <p>Via ci dderetealca 12 - 10098 Torno</p>
+      <p>vattelapesca@gmail.com</p>
     </footer>
 
   </body>
