--- a/responsive/index2.html
+++ b/responsive/index2.html
@@ -1,4 +1,5 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!--Dice che la grandezza della finestra deve essere uguale alla grandezza del device-->
 <!DOCTYPE html>
 <html>
 <head>
