--- a/responsive/index2.html
+++ b/responsive/index2.html
@@ -66,7 +66,7 @@
 			<aside class="desktop">
 				<h2>Menu secondario</h2>
 				<div class="img-background">
-					<p>Èn immagine di sfondo</p>
+					<p>È un immagine di sfondo</p>
 				</div>
 				<div class="square-section">absolute rispetto aside</div>
 			</aside>
