--- a/20170607Sass/index.html
+++ b/20170607Sass/index.html
@@ -55,6 +55,13 @@
 
         <p>Less è la stessa identica cosa ma funziona in Js invece che Ruby, quindi cambia solo il compilatore che ci gira dietro.</p>
 
+        <code>>@mixin transition($time){
+              transition: all $time ease-in-out;
+            }
+            </code
+
+        <p>Il transition si mette nell'elemento che sarà interessato da essa. Nel caso volessimo più transition, il primo attributo non sarà all ma "background per esempio"</p>
+
         <h4>Altro argomento</h4>
         <p>Tutte le librerie, i motori, i compilatori sono dati da dei gestori di pacchetti in modo che tutti ce li abbiano.</p>
         <p>JS ha <a href="https://www.npmjs.com/" target="_blank">npm</a>. In qeusto modo tu ti vai a scaricare il pacchetto che ti serve. Per esempio modularscale-sass.</p>
