--- a/20170617EserPerCompito/index.html
+++ b/20170617EserPerCompito/index.html
@@ -14,17 +14,17 @@
   <body>
 
     <div class="form-container">
-      <form id="form" class="form" action="index.html" method="post">
+      <form id="logSignForm" class="form" action="index.html" method="post">
         <h1>Sign Up or Log In</h1>
-        <label for="name">Name:</label>
-        <input id="name" type="text" name="name">
-        <label for="surname">Surname:</label>
-        <input id="surname" type="text" name="surname" >
+        <label for="name">Nome:</label>
+        <input  onKeyup="disableButton()" id="name" type="text" name="name">
+        <label for="surname">Cognome:</label>
+        <input  onKeyup="disableButton()" id="surname" type="text" name="surname" >
         <label for="email">Email:</label>
-        <input id="email" type="email" name="email" >
+        <input  onKeyup="disableButton()" id="email" type="email" name="email" >
         <label for="password">Password:</label>
-        <input id="password" type="password" name="password" >
-        <button id="button" type="submit" name="button">Send</button>
+        <input  onKeyup="disableButton()" id="password" type="password" name="password" >
+        <button id="button" type="submit" name="button" >Invia</button>
       </form>
 
     </div>
