--- a/20170617EserPerCompito/index.html
+++ b/20170617EserPerCompito/index.html
@@ -12,25 +12,25 @@
 
   </head>
   <body>
+    <!-- onkeyup="disableButton()" -->
 
     <div class="form-container">
-      <form id="logSignForm" class="form" action="index.html" method="post">
+      <form id="logSignForm" class="form" action="http://webhook.site/e7dc96f5-13d1-45c5-a416-011c7b571dc4" method="post">
         <h1>Sign Up or Log In</h1>
         <label for="name">Nome:</label>
-        <input  onKeyup="disableButton()" id="name" type="text" name="name">
+        <input onkeyup= "valid()" id="name" type="text" name="name">
         <label for="surname">Cognome:</label>
-        <input  onKeyup="disableButton()" id="surname" type="text" name="surname" >
+        <input  onkeyup= "valid()" id="surname" type="text" name="surname" >
         <label for="email">Email:</label>
-        <input  onKeyup="disableButton()" id="email" type="email" name="email" >
+        <input  onkeyup= "valid()" id="email" type="email" name="email" >
         <label for="password">Password:</label>
-        <input  onKeyup="disableButton()" id="password" type="password" name="password" >
+        <input  onkeyup= "valid()" id="password" type="password" name="password" >
         <button id="button" type="submit" name="button" >Invia</button>
       </form>
 
     </div>
 
     <script src="functions.js">
-
     </script>
 
   </body>
