Aggiunto qualche elemento alla pagina del form

--- a/20170620/index.html
+++ b/20170620/index.html
@@ -12,6 +12,25 @@
 
   </head>
   <body>
+
+    <header>
+      <div class="logo text-color">LOGO</div>
+			<a href="#" class="login text-color">Login</a>
+    </header>
+
+    <nav>
+			<ul>
+				<li>
+					<a href="#">home</a>
+				</li>
+				<li>
+					<a href="about.html">about</a>
+				</li>
+				<li>
+					<a href="contact.html">contact</a>
+				</li>
+			</ul>
+		</nav>
     <!-- onkeyup="disableButton()" -->
 
     <div class="form-container">
