Caricamento post test

--- a/20170617EserPerCompito/index.html
+++ b/20170617EserPerCompito/index.html
@@ -17,7 +17,7 @@
     <div class="form-container">
       <form id="logSignForm" class="form" action="http://webhook.site/e7dc96f5-13d1-45c5-a416-011c7b571dc4" method="post">
         <h1>Sign Up or Log In</h1>
-        <label for="name">Nome:</label>
+        <label for="name">Nome:</label><label style="font-family: wingdings; font-size: 150%; color: red;">&#252;</label>
         <input onfocus= "valid()" id="name" type="text" name="name">
         <label for="surname">Cognome:</label>
         <input  onfocus= "valid()" id="surname" type="text" name="surname" >
@@ -26,6 +26,7 @@
         <label for="password">Password:</label>
         <input  onfocus= "valid()" id="password" type="password" name="password" >
         <button id="button" type="submit" name="button" >Invia</button>
+        <label style="font-family: wingdings; font-size: 200%; color: red;">&#252;</label>
       </form>
 
     </div>
