--- a/20170711Antonino/contactUs.html
+++ b/20170711Antonino/contactUs.html
@@ -8,6 +8,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Zilla+Slab" rel="stylesheet">
   </head>
   <body>
     <nav class="navbar navbar-default">
@@ -26,40 +27,52 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li class="active" id="home"><a href="index.html">Home<span class="sr-only">(current)</span></a></li>
-            <li><a href="#" id="contactUs">Contact Us</a></li>
+            <li id="home"><a href="index.html">Home<span class="sr-only">(current)</span></a></li>
+            <li class="active"><a href="#" id="contactUs">Contact Us</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
 </nav>
     <div class="container">
       <section>
-        <form id="form" action="#" method="post">
-          <div class="form-group">
-            <label for="name">Name</label>
-            <input type="text" class="form-control" id="name" aria-describedby="nameHelp" placeholder="Enter name">
-          </div>
-          <div class="form-group">
-            <label for="email">Email address</label>
-            <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email">
-            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-          </div>
-          <div class="form-group">
-            <label for="object">Object</label>
-            <input type="text" class="form-control" id="object" aria-describedby="nameHelp" placeholder="Enter object">
-          </div>
-          <div class="form-group">
-            <label for="messageBody">Message</label>
-            <textarea class="form-control" id="messageBody" rows="3" placeholder="Write here your message"></textarea>
-          </div>
-          <button type="submit" id="submit" class="btn btn-primary">Submit</button>
-        </form>
+        <div class="formContainer">
+          <form id="form" action="#" method="post">
+            <div class="form-group">
+              <label for="name">Name</label>
+              <input type="text" class="form-control" id="name" aria-describedby="nameHelp" placeholder="Enter name">
+            </div>
+            <div class="form-group">
+              <label for="email">Email address</label>
+              <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email">
+              <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+            </div>
+            <div class="form-group">
+              <label for="object">Object</label>
+              <input type="text" class="form-control" id="object" aria-describedby="nameHelp" placeholder="Enter object">
+            </div>
+            <div class="form-group">
+              <label for="messageBody">Message</label>
+              <textarea class="form-control" id="messageBody" rows="3" placeholder="Write here your message"></textarea>
+            </div>
+            <button type="submit" id="submit" class="btn btn-primary">Submit</button>
+          </form>
+
+        </div>
+
 
 
       </section>
 
 
     </div>
+    <footer>
+      <div class="footerContainer">
+        <span class="text-muted"><p>Marco Antonino</p></span>
+        <span class="text-muted"><p>Corso Back-End</p></span>
+        <span class="text-muted"><p>marco[dot]antonino[at]edu[dot]itspiemonte[dot]it</p></span>
+
+      </div>
+    </footer>
 
   <script src="script.js">
   </script>
