--- a/20170711Antonino/index.html
+++ b/20170711Antonino/index.html
@@ -8,6 +8,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Zilla+Slab" rel="stylesheet">
   </head>
   <body>
     <nav class="navbar navbar-default">
@@ -31,7 +32,7 @@
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
-</nav>
+    </nav>
     <div class="container">
       <section>
 
@@ -40,8 +41,17 @@
 
 
     </div>
+    <footer class="footer">
+      <div class="footerContainer">
+        <span class="text-muted"><p>Marco Antonino</p></span>
+        <span class="text-muted"><p>Corso Back-End</p></span>
+        <span class="text-muted"><p>marco[dot]antonino[at]edu[dot]itspiemonte[dot]it</p></span>
+
+      </div>
+    </footer>
 
   <script src="script.js">
   </script>
   </body>
+
 </html>
