--- a/20170711Antonino/index.html
+++ b/20170711Antonino/index.html
@@ -21,7 +21,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Antonino</a>
+          <a class="navbar-brand" href="#"><img src="img/logo.png" alt="Brand"></a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
