--- a/20170711Antonino/contactUs.html
+++ b/20170711Antonino/contactUs.html
@@ -21,7 +21,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#"><img src="img/logo.png" alt="Brand"></a>
+          <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="Brand"></a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -43,7 +43,7 @@
             </div>
             <div class="form-group">
               <label for="email">Email address</label>
-              <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email">
+              <input type="text" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email">
               <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
             </div>
             <div class="form-group">
@@ -76,5 +76,9 @@
 
   <script src="script.js">
   </script>
+  <div class="alert alert-warning">
+    <a href="#" class="close" data-dismiss="alert" id="emptyForm">&times;</a>
+    <strong>Warning!</strong> There was a problem with your network connection.
+</div>
   </body>
 </html>
