--- a/20170704Ajax/index.html
+++ b/20170704Ajax/index.html
@@ -6,6 +6,8 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script type="text/javascript" src="script.js"></script>
+    <link rel="stylesheet" type="text/css" href="style.css">
+
     </head>
   <body>
     <div class="container">
@@ -22,5 +24,6 @@
     </div>
 
 
+  <script src="script.js"></script>
   </body>
 </html>
